--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="index.css">
         <meta charset="utf-8">
         
-        <meta name="google-signin-scope" content="profile email">
-        <meta name="google-signin-client_id" content="356220281529-2k14nl0ocd22oc48qif8k0pj5uppu1hm.apps.googleusercontent.com.apps.googleusercontent.com">
+        <meta name="google-signin-client_id" content="356220281529-2k14nl0ocd22oc48qif8k0pj5uppu1hm.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
